--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ExpanseTracker
 @using ExpanseTracker.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using ExpanseTracker.Models.Categories
