--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using ExpanseTracker.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using ExpanseTracker.Models.Categories
+@using ExpanseTracker.Data
